--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Home page</title>
 
 
@@ -93,6 +94,44 @@ body {
     max-width: 600px;
       margin: 0 auto;
       padding: 20px;
+}
+@media screen and (max-width: 600px) {
+  .topnav {
+    position: static;
+    padding: 15px;
+    text-align: center;
+  }
+  .topnav a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .skills-container {
+    margin-left: 0;
+  }
+  .skills-column {
+    width: 100%;
+    margin-left: 0;
+    text-align: center;
+  }
+  .format {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  body {
+  text-align: center;
+  font-size: 18px;
+  max-width: 100%;
+  padding-left: 0;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+img:hover {
+  box-shadow: none;
+}
+
 }
 
 
