--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,45 @@ body{
     text-align: center;
     font-size: 25px;
 }
+
+@media screen and (max-width: 600px) {
+  .topnav {
+    position: static;
+    padding: 15px;
+    text-align: center;
+  }
+  .topnav a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .skills-container {
+    margin-left: 0;
+  }
+  .skills-column {
+    width: 100%;
+    margin-left: 0;
+    text-align: center;
+  }
+  .format {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  body {
+  text-align: center;
+  font-size: 18px;
+  max-width: 100%;
+  padding-left: 0;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+img:hover {
+  box-shadow: none;
+}
+
+}
     </style>
 
 <div class="topnav">
